自制长方形游戏初稿

--- a/css/style.css
+++ b/css/style.css
@@ -1,70 +1,1 @@
-/*index style*/
-.cuboid-drag-container {
-  width: 80vw;
-  height: 90vh;
-  margin: 0 auto;
-  position: relative;
-  margin-top: 20px;
-  background: url("../img/timg.jpg") no-repeat center 50%; }
-  .cuboid-drag-container .cuboid-drag-sun {
-    position: absolute;
-    top: 8%;
-    left: 20%; }
-    .cuboid-drag-container .cuboid-drag-sun img {
-      width: 5rem;
-      height: 5rem; }
-  .cuboid-drag-container .cuboid-drop-board {
-    margin: 0 auto;
-    width: 90%;
-    height: 60%; }
-    .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center; }
-      .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item {
-        width: 10rem;
-        height: 10rem; }
-      .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(1) {
-        background: #32a0d6; }
-      .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(2) {
-        background: #85d528; }
-      .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(3) {
-        background: #bfb34b; }
-      .cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(4) {
-        background: #80ccd6; }
-  .cuboid-drag-container .cuboid-drag-list {
-    margin: 0 auto;
-    width: 100%;
-    height: 40%;
-    margin-top: 20px; }
-    .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station {
-      width: 100%;
-      height: 100%;
-      display: flex;
-      flex-direction: row;
-      justify-content: center;
-      align-items: center; }
-      .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item {
-        width: 8rem;
-        height: 8rem; }
-      .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(1) {
-        background: #7e6bd6; }
-      .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(2) {
-        background: #d17789; }
-      .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(3) {
-        background: #a9a419; }
-      .cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(4) {
-        background: #29d481; }
-
-.cuboid-mask-layer {
-  width: 100vw;
-  height: 100vh;
-  background: rgba(0, 0, 0, 0.9);
-  position: absolute;
-  top: 0;
-  left: 0; }
-
-/*# sourceMappingURL=style.css.map */
+.cuboid-drag-container{width:80vw;height:90vh;margin:0 auto;position:relative;margin-top:20px;background:url(../img/timg.jpg) no-repeat center 50%}.cuboid-drag-container .cuboid-drag-sun{position:absolute;top:-4rem;left:1rem}.cuboid-drag-container .cuboid-drag-sun img{width:3rem;height:3rem}.cuboid-drag-container .cuboid-drag-log{width:28rem;position:absolute;top:-3.4rem;left:5rem}.cuboid-drag-container .cuboid-drag-log img{width:100%;height:100%}.cuboid-drag-container .cuboid-drop-board{margin:0 auto;width:90%;height:60%}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target{width:100%;height:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item{width:10rem;height:10rem}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(1){background:#32a0d6;position:relative}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(2){background:#85d528}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(3){background:#bfb34b}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-item:nth-child(4){background:#80ccd6}.cuboid-drag-container .cuboid-drop-board .cuboid-drop-target .cuboid-drop-unify{background:#0bd8bd!important}.cuboid-drag-container .cuboid-drag-list{margin:0 auto;width:90%;height:15%;margin-top:20px}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station{width:100%;height:100%;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-orient:horizontal;-webkit-box-direction:normal;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:center;-webkit-justify-content:center;-ms-flex-pack:center;justify-content:center;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item{width:10rem;height:10rem;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-box-align:center;-webkit-align-items:center;-ms-flex-align:center;align-items:center}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item .cuboid-drag-bar{margin:0 auto;width:8rem;height:8rem}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(1) .cuboid-drag-bar{background:#7e6bd6}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(2) .cuboid-drag-bar{background:#d17789}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(3) .cuboid-drag-bar{background:#a9a419}.cuboid-drag-container .cuboid-drag-list .cuboid-drag-station .cuboid-drag-item:nth-child(4) .cuboid-drag-bar{background:#29d481}.cuboid-mask-layer{width:100vw;height:100vh;background:rgba(0,0,0,.9);position:absolute;top:0;left:0}
