--- a/scss/style.scss
+++ b/scss/style.scss
@@ -13,11 +13,21 @@ $baseHeight:90vh;
   background: url("../img/timg.jpg") no-repeat center 50%;
   .cuboid-drag-sun{
     position: absolute;
-    top:8%;
-    left: 20%;
+    top:-4rem;
+    left: 1rem;
     img{
-      width:5rem;
-      height:5rem;
+      width:3rem;
+      height:3rem;
+    }
+  }
+  .cuboid-drag-log{
+    width:28rem;
+    position: absolute;
+    top:-3.4rem;
+    left: 5rem;
+    img{
+      width:100%;
+      height:100%;
     }
   }
   .cuboid-drop-board{
@@ -37,6 +47,7 @@ $baseHeight:90vh;
       }
       .cuboid-drop-item:nth-child(1){
         background: #32a0d6;
+        position: relative;
       }
       .cuboid-drop-item:nth-child(2){
         background: #85d528;
@@ -47,12 +58,15 @@ $baseHeight:90vh;
       .cuboid-drop-item:nth-child(4){
         background: #80ccd6;
       }
+      .cuboid-drop-unify{
+        background: #0bd8bd !important;
+      }
     }
   }
   .cuboid-drag-list{
     @include middle();
-    width:100%;
-    height:40%;
+    width:90%;
+    height:15%;
     margin-top:20px;
     .cuboid-drag-station{
       width:100%;
@@ -62,20 +76,36 @@ $baseHeight:90vh;
       justify-content: center;
       align-items: center;
       .cuboid-drag-item{
-        width: 8rem;
-        height:8rem;
+        width: 10rem;
+        height:10rem;
+        display: flex;
+        align-items: center;
+        .cuboid-drag-bar{
+          @include middle();
+          width:8rem;
+          height:8rem;
+         // border:1px solid #ff0000;
+        }
       }
       .cuboid-drag-item:nth-child(1){
-        background: #7e6bd6;
+        .cuboid-drag-bar{
+          background: #7e6bd6;
+        }
       }
       .cuboid-drag-item:nth-child(2){
-        background: #d17789;
+        .cuboid-drag-bar{
+          background: #d17789;
+        }
       }
       .cuboid-drag-item:nth-child(3){
-        background: #a9a419;
+        .cuboid-drag-bar{
+          background: #a9a419;
+        }
       }
       .cuboid-drag-item:nth-child(4){
-        background: #29d481;
+        .cuboid-drag-bar{
+          background: #29d481;
+        }
       }
     }
   }
