--- a/css/base.css
+++ b/css/base.css
@@ -1,1 +1,1 @@
-body{background-color:#bcc1c6}canvas{background:#111;border:1px solid #171717;display:block;left:50%;margin:-51px 0 0 -201px;position:absolute;top:50%}
+body{background-color:#bcc1c6;-webkit-perspective:14800px;perspective:14800px}canvas{background:#111;border:1px solid #171717;display:block;left:50%;margin:-51px 0 0 -201px;position:absolute;top:50%}
