--- a/scss/style.scss
+++ b/scss/style.scss
@@ -11,7 +11,7 @@ $lucency:0.2;
 @mixin middle(){
   margin:0 auto;
 }
-.cuboid-drag-container{
+.cuboid-drag-container,.cuboid-drag-second-container{
   width:$baseWidth;
   height:$baseHeight;
   @include middle();
@@ -183,6 +183,28 @@ $lucency:0.2;
         .cuboid-drop-side{
           display: block;
         }
+        .cuboid-drop-side:nth-child(1){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
+        .cuboid-drop-side:nth-child(2){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
+        .cuboid-drop-side:nth-child(5){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
+        .cuboid-drop-side:nth-child(6){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
+      }
+      .cuboid-drop-item:nth-child(1){
+        .cuboid-drop-side:nth-child(4){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
+      }
+      .cuboid-drop-item:nth-child(6){
+        .cuboid-drop-side:nth-child(3){
+          background: rgba(57, 215, 55, 0.4) !important;
+        }
       }
     }
   }
@@ -294,7 +316,144 @@ $lucency:0.2;
       }
     }
   }
+  .cuboid-drag-next{
+    width:6rem;
+    height:3rem;
+    position: absolute;
+    right: 1rem;;
+    bottom:1rem;
+    img{
+      width:100%;
+      height:100%;
+    }
+  }
 }
+.cuboid-drag-second-container{
+   display: none;
+  position: absolute;
+  left: 0;
+  top: 0;
+  background: url("../img/timg11.jpg") no-repeat center 50%;
+  background-size: cover;
+   .cuboid-drop-board{
+     margin-top:4rem;
+     .cuboid-drop-target{
+       height:40%;
+       .cuboid-drop-item{
+
+       }
+       .cuboid-drop-item:nth-child(1){
+
+       }
+       .cuboid-drop-item:nth-child(2){
+
+       }
+       .cuboid-drop-item:nth-child(3){
+         .cuboid-drop-side:nth-child(1){
+           border: 1px solid #333;
+           border-left:none;
+         }
+         .cuboid-drop-side:nth-child(3){
+           border: 1px solid #333;
+         }
+         .cuboid-drop-side:nth-child(5){
+           border: 1px solid #333;
+           border-left: none;
+         }
+         .cuboid-drop-side:nth-child(6){
+           border: 1px solid #333;
+           border-left: none;
+         }
+         .cuboid-drop-side:nth-child(2){
+           border: 1px solid #333;
+           border-left:none;
+         }
+       }
+       .cuboid-drop-item:nth-child(4){
+         .cuboid-drop-side:nth-child(1){
+           border: 1px solid #333;
+           border-right:none;
+         }
+         .cuboid-drop-side:nth-child(2){
+           border: 1px solid #333;
+           border-right:none;
+         }
+         .cuboid-drop-side:nth-child(4){
+           border: 1px solid #333;
+         }
+         .cuboid-drop-side:nth-child(5){
+           border: 1px solid #333;
+           border-right: none;
+         }
+         .cuboid-drop-side:nth-child(6){
+           border: 1px solid #333;
+           border-right: none;
+         }
+       }
+       .cuboid-drop-item:nth-child(5){
+
+       }
+       .cuboid-drop-item:nth-child(6){
+
+         .cuboid-drop-side:nth-child(1){
+
+         }
+         .cuboid-drop-side:nth-child(3){
+
+         }
+         .cuboid-drop-side:nth-child(5){
+
+         }
+         .cuboid-drop-side:nth-child(6){
+
+         }
+         .cuboid-drop-side:nth-child(2){
+
+         }
+       }
+       .cuboid-drop-unify{
+
+       }
+     }
+   }
+  .cuboid-drop-success{
+    .cuboid-drop-target{
+      .cuboid-drop-item{
+        background: none !important;
+        border:none !important;
+        .cuboid-drop-side{
+          display: block;
+        }
+        .cuboid-drop-side:nth-child(1){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+        .cuboid-drop-side:nth-child(2){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+        .cuboid-drop-side:nth-child(5){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+        .cuboid-drop-side:nth-child(6){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+
+      }
+      .cuboid-drop-item:nth-child(1),.cuboid-drop-item:nth-child(4){
+        .cuboid-drop-side:nth-child(4){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+      }
+      .cuboid-drop-item:nth-child(3),.cuboid-drop-item:nth-child(6){
+        .cuboid-drop-side:nth-child(3){
+          background: rgba(57, 215, 55, 0.2) !important;
+        }
+      }
+    }
+  }
+   .cuboid-drag-list{
+     height:0;
+   }
+ }
 .cuboid-mask-layer{
   width:100vw;
   height:100vh;
