--- a/scss/style.scss
+++ b/scss/style.scss
@@ -317,11 +317,11 @@ $lucency:0.2;
     }
   }
   .cuboid-drag-next{
-    width:6rem;
-    height:3rem;
+    width:10rem;
+    height:8rem;
     position: absolute;
-    right: 1rem;;
-    bottom:1rem;
+    right: 5rem;;
+    bottom:3rem;
     img{
       width:100%;
       height:100%;
@@ -338,57 +338,26 @@ $lucency:0.2;
    .cuboid-drop-board{
      margin-top:4rem;
      .cuboid-drop-target{
-       height:40%;
+       height:30%;
+       width:$size*$outContainer/2;
+       flex-wrap: wrap;
+       @include middle();
+       margin-top:14rem;
        .cuboid-drop-item{
 
        }
-       .cuboid-drop-item:nth-child(1){
+       .cuboid-drop-item:nth-child(1) {
+         .cuboid-drop-side:nth-child(1) {
 
+         }
        }
        .cuboid-drop-item:nth-child(2){
-
        }
        .cuboid-drop-item:nth-child(3){
-         .cuboid-drop-side:nth-child(1){
-           border: 1px solid #333;
-           border-left:none;
-         }
-         .cuboid-drop-side:nth-child(3){
-           border: 1px solid #333;
-         }
-         .cuboid-drop-side:nth-child(5){
-           border: 1px solid #333;
-           border-left: none;
-         }
-         .cuboid-drop-side:nth-child(6){
-           border: 1px solid #333;
-           border-left: none;
-         }
-         .cuboid-drop-side:nth-child(2){
-           border: 1px solid #333;
-           border-left:none;
-         }
+
        }
        .cuboid-drop-item:nth-child(4){
-         .cuboid-drop-side:nth-child(1){
-           border: 1px solid #333;
-           border-right:none;
-         }
-         .cuboid-drop-side:nth-child(2){
-           border: 1px solid #333;
-           border-right:none;
-         }
-         .cuboid-drop-side:nth-child(4){
-           border: 1px solid #333;
-         }
-         .cuboid-drop-side:nth-child(5){
-           border: 1px solid #333;
-           border-right: none;
-         }
-         .cuboid-drop-side:nth-child(6){
-           border: 1px solid #333;
-           border-right: none;
-         }
+
        }
        .cuboid-drop-item:nth-child(5){
 
@@ -418,40 +387,115 @@ $lucency:0.2;
    }
   .cuboid-drop-success{
     .cuboid-drop-target{
-      .cuboid-drop-item{
-        background: none !important;
-        border:none !important;
-        .cuboid-drop-side{
-          display: block;
+      width: $size*$outContainer/2.1;
+      transform-style: preserve-3d;
+      transform:rotateX(-6deg) rotateY(-12deg);
+      .cuboid-drop-item:nth-child(1) {
+        .cuboid-drop-side:nth-child(2) {
+            border:none;
+          background: none !important;
         }
+        .cuboid-drop-side:nth-child(4) {
+          border-bottom:none;
+        }
+        .cuboid-drop-side:nth-child(3) {
+            border-bottom:none;
+        }
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-bottom:none;
+        }
+      }
+      .cuboid-drop-item:nth-child(2){
         .cuboid-drop-side:nth-child(1){
-          background: rgba(57, 215, 55, 0.2) !important;
+          border-right:1px solid #333;
+        }
+        .cuboid-drop-side:nth-child(2) {
+          border:none;
+          background: none !important;
+        }
+        .cuboid-drop-side:nth-child(3) {
+          border-top:none;
+        }
+        .cuboid-drop-side:nth-child(4) {
+          border-bottom:none;
+        }
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-bottom:none;
+          border-right:1px solid #333;
+        }
+      }
+      .cuboid-drop-item:nth-child(3){
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-bottom:none;
+          border-top:none;
+          border-left:1px solid #333;
         }
         .cuboid-drop-side:nth-child(2){
-          background: rgba(57, 215, 55, 0.2) !important;
+          border:none;
+          background: none !important;
         }
-        .cuboid-drop-side:nth-child(5){
-          background: rgba(57, 215, 55, 0.2) !important;
-        }
-        .cuboid-drop-side:nth-child(6){
-          background: rgba(57, 215, 55, 0.2) !important;
+        .cuboid-drop-side:nth-child(1){
+          background: none !important;
+          border:none;
         }
 
       }
-      .cuboid-drop-item:nth-child(1),.cuboid-drop-item:nth-child(4){
-        .cuboid-drop-side:nth-child(4){
-          background: rgba(57, 215, 55, 0.2) !important;
+      .cuboid-drop-item:nth-child(4){
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-bottom:none;
+          border-top:none;
+          border-right:1px solid #333;
+        }
+        .cuboid-drop-side:nth-child(1){
+          background: none !important;
+          border: none;
+        }
+        .cuboid-drop-side:nth-child(2){
+          border:none;
+          background: none !important;
         }
       }
-      .cuboid-drop-item:nth-child(3),.cuboid-drop-item:nth-child(6){
+      .cuboid-drop-item:nth-child(5){
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-top:none;
+          border-left:1px solid #333;
+        }
+        .cuboid-drop-side:nth-child(1){
+          border:none;
+          background: none !important;
+        }
+        .cuboid-drop-side:nth-child(2){
+          border-left:1px solid #333;
+        }
+      }
+      .cuboid-drop-item:nth-child(6){
+
+        .cuboid-drop-side:nth-child(5),.cuboid-drop-side:nth-child(6) {
+          border-top:none;
+        }
+        .cuboid-drop-side:nth-child(1){
+          border:none;
+          background: none !important;
+        }
         .cuboid-drop-side:nth-child(3){
-          background: rgba(57, 215, 55, 0.2) !important;
+          border-top:none;
         }
       }
     }
   }
    .cuboid-drag-list{
      height:0;
+     position: relative;
+     .cuboid-drag-again{
+        height:6rem;
+       width:10rem;
+       position: absolute;
+       right: 5rem;
+       bottom:4rem;
+       font-size: 4rem;
+       color: #302f94;
+       display: none;
+     }
    }
  }
 .cuboid-mask-layer{
